<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fadingEdge="none">
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <TextView
        style="@style/CenteredHeaderTV"
        android:text="@string/primary_color" />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <View
          android:id="@+id/VW_primary_color"
          style="@style/LeftColumnVW" />
        <EditText
          android:id="@+id/ET_primary_color"
          style="@style/RightColumnET" />
      </LinearLayout>
      <TextView
        style="@style/CenteredHeaderTV"
        android:text="@string/secondary_color" />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <View
          android:id="@+id/VW_secondary_color"
          style="@style/LeftColumnVW" />
        <EditText
          android:id="@+id/ET_secondary_color"
          style="@style/RightColumnET" />
      </LinearLayout>
      <TextView
        style="@style/CenteredHeaderTV"
        android:text="@string/background_color" />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <View
          android:id="@+id/VW_background_color"
          style="@style/LeftColumnVW" />
        <EditText
          android:id="@+id/ET_background_color"
          style="@style/RightColumnET" />
      </LinearLayout>
      <TextView
        style="@style/CenteredHeaderTV"
        android:text="@string/line_color" />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <View
          android:id="@+id/VW_line_color"
          style="@style/LeftColumnVW" />
        <EditText
          android:id="@+id/ET_line_color"
          style="@style/RightColumnET" />
      </LinearLayout>
      <TextView
        style="@style/CenteredHeaderTV"
        android:text="@string/line_thickness" />
      <EditText
        android:id="@+id/ET_line_thickness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLines="1"
        android:lines="1"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" />
      <TextView
        style="@style/CenteredHeaderTV"
        android:text="@string/diamonds_x" />
      <com.doomonafireballstudios.argylelivewallpaper.NumberPicker
        android:id="@+id/NP_diamonds_x"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
      <TextView
        style="@style/CenteredHeaderTV"
        android:text="@string/diamonds_y" />
      <com.doomonafireballstudios.argylelivewallpaper.NumberPicker
        android:id="@+id/NP_diamonds_y"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
      <TextView
        style="@style/CenteredHeaderTV"
        android:text="@string/start_lines_in_corner"
        android:layout_marginBottom="0dp" />
      <CheckBox
        android:id="@+id/CB_start_lines_in_corner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
      <View
        android:layout_width="wrap_content"
        android:layout_height="25dp" />
      <Button
        android:id="@+id/BTN_preview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp" />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">
        <Button
          android:id="@+id/BTN_save_image"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1.0"
          android:text="@string/save_image"
          android:layout_marginRight="2dp" />
        <Button
          android:id="@+id/BTN_set_as_wallpaper"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1.0"
          android:text="@string/set_as_wallpaper"
          android:layout_marginLeft="2dp" />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</LinearLayout>